# cronberry

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.rst  VERSION  VERSION.license  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  push.yml
.reuse/: dep5
LICENSES/: MIT.txt
cronberry/: __init__.py  app.py  fields.py
docs/: api.rst  api_app.rst  api_fields.rst  conf.py  index.rst  requirements.txt
examples/: example.sh
tests/: conftest.py  test_cli.py  test_library.py  test_read_table.py
tests/tables/: bad.tab  combined.tab  new.tab  src.tab
