# SPDX-FileCopyrightText: 2024 Alec Delaney
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]

[project]
name = "cronberry"
description = "Library and CLI for working with multiple cron jobs within a single cron table"
authors = [
    {name = "Alec Delaney", email = "tekktrik@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.rst"
requires-python = ">= 3.8"
keywords = [
    "cron",
    "crontab",
    "tools",
    "scheduler",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/tekktrik/cronberry"
Repository = "https://github.com/tekktrik/cronberry"
Documentation = "https://cronberry.readthedocs.io/en/latest/"

[project.scripts]
cronberry = "cronberry.app:cli"

[tool.setuptools]
packages = ["cronberry"]

[tool.setuptools.package-data]
cronberry = ["py.typed"]

[tool.setuptools.dynamic.version]
file = "VERSION"

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}

[tool.ruff.lint]
select = ["D", "PL", "UP", "I"]
ignore = ["D213", "D203"]
